--- a/shop/templates/accounts/register.html
+++ b/shop/templates/accounts/register.html
@@ -154,7 +154,7 @@
   <div class="row">
     <!-- Hình minh họa -->
     <div class="image-side">
-      <img src="https://img.lovepik.com/png/20231112/cybersecurity-clipart-detailed-illustration-of-various-cartoon-characters-and-computer_564960_wh1200.png" alt="Register illustration">
+      <img src="/media/Products/login.jpg" alt="Register illustration">
     </div>
 
     <!-- Form đăng ký -->
