--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -312,15 +312,15 @@ footer .copyright {
       <!-- Contact Info -->
       <div class="col">
         <h3>Thông tin liên hệ</h3>
-        <p>Địa chỉ: 33 Xô Viết Nghệ TĨnh, Đà Nẵng</p>
-        <p>Điện thoại: 0937830262</p>
-        <p>Email: support@vandinhtechnology.vn</p>
+        <p>Địa chỉ:62 bình lợi TPHCM</p>
+        <p>Điện thoại: 0934244071</p>
+        <p>Email: ngocdiem2004qn@gmail.com</p>
       </div>
 
       <!-- Newsletter & Social -->
       <div class="col">
         <h3>Bản đồ</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1475.8131734809022!2d108.22241871076486!3d16.032165235494077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314218389cf02c2b%3A0xbdc63233587e2d88!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyDEkMO0bmcgw4E!5e1!3m2!1svi!2s!4v1746979697589!5m2!1svi!2s" width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.7825072168357!2d106.70365941012784!3d10.827949458197725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528895b930bc5%3A0xed07b786983f13c!2zNjIgQsOsbmggTOG7o2ksIFBoxrDhu51uZyAxMywgQsOsbmggVGjhuqFuaCwgVGjDoG5oIHBo4buRIEjhu5MgQ2jDrSBNaW5oLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1768622625704!5m2!1svi!2shttps://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.7825072168357!2d106.70365941012784!3d10.827949458197725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528895b930bc5%3A0xed07b786983f13c!2zNjIgQsOsbmggTOG7o2ksIFBoxrDhu51uZyAxMywgQsOsbmggVGjhuqFuaCwgVGjDoG5oIHBo4buRIEjhu5MgQ2jDrSBNaW5oLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1768622625704!5m2!1svi!2s"" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="social-links mt-3">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
