--- a/shop/templates/accounts/login.html
+++ b/shop/templates/accounts/login.html
@@ -146,7 +146,7 @@
   <div class="row">
     <!-- Hình minh họa -->
     <div class="image-side">
-      <img src="https://img.lovepik.com/png/20231112/cybersecurity-clipart-detailed-illustration-of-various-cartoon-characters-and-computer_564960_wh1200.png" alt="Login illustration">
+      <img src="/media/Products/login.jpg" alt="Login illustration">
     </div>
     
 
