--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -37,7 +37,9 @@
             {% endif %}
           </div>
 
-          <p class="description">{{ product.description }}</p>
+          <div class="description">
+            {{ product.description|safe }}
+          </div>
 
           {% if product.stock > 0 %}
           <form method="post" action="{% url 'shop:cart' %}">
@@ -84,13 +86,7 @@
               <input type="hidden" name="product_id" value="{{ product.id }}">
               <div class="mb-3">
                 <label class="form-label">Số lượng</label>
-                <input type="number"
-                       name="quantity"
-                       value="1"
-                       min="1"
-                       max="{{ product.stock }}"
-                       class="form-control"
-                       required>
+                
               </div>
               <button type="submit" class="btn btn-success">Xác nhận</button>
               <button type="button" id="cancelPaymentBtn" class="btn btn-secondary ms-2">Hủy</button>
