--- a/shop/templates/accounts/register.html
+++ b/shop/templates/accounts/register.html
@@ -154,8 +154,11 @@
   <div class="row">
     <!-- Hình minh họa -->
     <div class="image-side">
-      <img src="/media/Products/login.jpg" alt="Register illustration">
+      <a href="https://ibb.co/RGkRz2Kz">
+        <img src="https://i.ibb.co/SD4FRNgR/login.jpg" alt="login" border="0">
+      </a>
     </div>
+
 
     <!-- Form đăng ký -->
     <div class="form-side">
