--- a/shop/templates/accounts/login.html
+++ b/shop/templates/accounts/login.html
@@ -146,8 +146,11 @@
   <div class="row">
     <!-- Hình minh họa -->
     <div class="image-side">
-      <img src="/media/Products/login.jpg" alt="Login illustration">
-    </div>
+  <a href="https://ibb.co/RGkRz2Kz">
+    <img src="https://i.ibb.co/SD4FRNgR/login.jpg" alt="login" border="0">
+  </a>
+</div>
+
     
 
     <!-- Form đăng nhập -->
