--- a/shop/templates/shop/product_list.html
+++ b/shop/templates/shop/product_list.html
@@ -324,7 +324,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
           <div class="card h-100">
             {% if p.image %}
-              <img src="{{ p.image.url }}" class="card-img-top" alt="{{ p.name }}">
+              <img src="{{ p.image }}" class="card-img-top" alt="{{ p.name }}">
             {% endif %}
             <div class="card-body">
               <h5 class="card-title">{{ p.name }}</h5>
