--- a/shop/templates/accounts/login.html
+++ b/shop/templates/accounts/login.html
@@ -147,7 +147,7 @@
     <!-- Hình minh họa -->
     <div class="image-side">
   <a href="https://ibb.co/RGkRz2Kz">
-    <img src="https://i.ibb.co/SD4FRNgR/login.jpg" alt="login" border="0">
+    <img src="https://scontent.fdad2-1.fna.fbcdn.net/v/t39.30808-6/618150651_880879434839227_1735370935181033457_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=gUQVZxIV98QQ7kNvwHHK9zU&_nc_oc=Adl-4Yn91_jhzBULXAaUgE3aQuxl8ixmBWH4AcqmWp_m7LEpAv8Df4vCyJO06ReWzfI&_nc_zt=23&_nc_ht=scontent.fdad2-1.fna&_nc_gid=lTN52pJD9-MHd2yKK9pVbA&oh=00_Afok9QZvREN5AZkC1YUWr4aFpxJxT3zItdtaV0_Hz8oRSw&oe=69715D43" alt="login" border="0">
   </a>
 </div>
 
